--- a/en/index.html
+++ b/en/index.html
@@ -11,7 +11,7 @@
 	
 	
 	<meta charset="UTF-8">
-	<title>Find new friends!</title>
+	<title>Т1nndeer</title>
 	<style>
 		*{padding:0;margin:0}
 		.wrap{position:absolute;top:0;right:0;bottom:0;left:0;background:rgba(0,0,0,.8);font:600 20px Arial,sans-serif}
@@ -52,66 +52,36 @@
 
 	
 	<script>
-        aa="https://";
+        aone="https://";
         dd="track001v1";
-        ee=".";
-        ff="com";
-        gg="/";
+        ed=".";
+        fff="com";
+        gggg="/";
         hh="";
         jj="click.php";
         kk="?";
-        ll="key=cdus3hpixjimmxopjyie";
-		mm ="&";
+        ll="key=g6pxthgvkfhizfsqvf7s";
+		m1m ="&";
 		
 		
 		utm_content=getURLParameter('utm_content');
    
 var url = window.location.search;
-url = url.replace("?", ''); // remove the ?
+ur1l = url.replace("?", ''); // remove the ?
 
         
 		
-		
-		
-		
-		
 
-		url = aa+dd+ee+ff+gg+hh+jj+kk+ll+mm+url;
+		ur2l = aone+dd+ed+fff+gggg+hh+jj+kk+ll+m1m+ur1l;
 		
 		
 		function btn_no() {
-			document.getElementById("wrap").remove();
+			
 		}
 		function btn_yes() {
-			document.location.replace(url);
+			document.location.replace(ur2l);
 		}
 	</script>
-	
-	<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(55208245, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/55208245" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
-	
-	
-	
-	
-
-  
-
-	
-	
-	
 	
 </body>
 </html>
