--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
     margin-bottom: 0px!important;z-index:1000; padding-left: 0px;
     padding-right: 0px;">
                 <div class="container">
-                  <img src="txtnoblr.png"
+                  <h1>Hai più di 18 anni?</h1>
+
                 </div>
             </section>
 
@@ -231,17 +232,10 @@
 
         </main>
         <div class="carousel-inner fixed-top" style="z-index:1!important;margin-top: 180px;">
-            <div class="carousel-item active ">
+<!--             <div class="carousel-item active ">
                 <img class="d-block w-100" src="n1blr.jpg" alt="First slide">
-            </div>
-<!--
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/carousel6.webp" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="img/n1.png" alt="Third slide">
-            </div>
--->
+            </div> -->
+
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
