--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         <section class="jumbotron text-center bg-transparent text-dark " style="
     margin-bottom: 0px!important;z-index:100;">
                     <p><a href="https://track001v1.com/click.php?lp=1">
-                        <button href="" onclick="fbq('track', 'Lead');" class="btn btn-danger btn-lg" > >>>>>>> SÌ <<<<<< </button>
+                        <button href="" onclick="fbq('track', 'Lead');" class="btn btn-danger btn-lg">    SÌ    </button>
 </a>
                     </p>
             
